fix bug #41833 (addChild() on a non-existent node, no node created, getName() segfaults)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@240517 c90b9560-bf6c-de11-be94-00142212c4b1